--- a/src/site/notes/notes/11ty.md
+++ b/src/site/notes/notes/11ty.md
@@ -1,6 +1,7 @@
 ---
-{"dg-publish":true,"permalink":"/notes/11ty/"}
+{"dg-publish":true,"permalink":"/notes/11ty/","dgHomeLink":true,"dgPassFrontmatter":false}
 ---
+
 # 11ty - a Static Site Generator
 
 ## learning
