--- a/src/site/notes/notes/learning/gcp/01.00 - Getting Started with GCP.md
+++ b/src/site/notes/notes/learning/gcp/01.00 - Getting Started with GCP.md
@@ -4,20 +4,13 @@
 
 # Getting Started with GCP
 
-## Other lessons
-
-- [[notes/learning/gcp/01.01 - The GCP resource hierarchy|01.01 - The GCP resource hierarchy]]
-- [[notes/learning/gcp/01.02 - GCP IAM|01.02 - GCP IAM]]
-- [[notes/learning/gcp/01.03 - Interacting with GCP|01.03 - Interacting with GCP]]
-
-
 ## Introduction
 
 IAM - Identity and Access Management
 
-Projects are the main way you organize the resources you use in GCP. Use them when you want to group a common business objective.
+**Projects** are the main way you organize the resources you use in GCP. Use them when you want to group a common business objective.
 
-[[notes/Principle of least privilege|Principle of least privilege]]:
+[[atomic-ideas/Principle of least privilege|Principle of least privilege]]:
 
 > Each user should have only those privileges needed to do their jobs.
 
