--- a/src/site/notes/notes/learning/gcp/01.01 - The GCP resource hierarchy.md
+++ b/src/site/notes/notes/learning/gcp/01.01 - The GCP resource hierarchy.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/notes/learning/gcp/01-01-the-gcp-resource-hierarchy/","dgHomeLink":true,"dgPassFrontmatter":false}
+{"dg-publish":true,"permalink":"/notes/learning/gcp/01-01-the-gcp-resource-hierarchy/","dgHomeLink":true,"dgPassFrontmatter":false,"dgShowBacklinks":true,"dgShowLocalGraph":true}
 ---
 
 ### The GCP resource hierarchy
