--- a/src/site/notes/notes/learning/gcp/01.03 - Interacting with GCP.md
+++ b/src/site/notes/notes/learning/gcp/01.03 - Interacting with GCP.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/notes/learning/gcp/01-03-interacting-with-gcp/","dgHomeLink":true,"dgPassFrontmatter":false}
+{"dg-publish":true,"permalink":"/notes/learning/gcp/01-03-interacting-with-gcp/","dgHomeLink":true,"dgPassFrontmatter":false,"dgShowBacklinks":true,"dgShowLocalGraph":true}
 ---
 
 ### Interacting with GCP
