--- a/src/site/notes/notes/learning/rocketseat/gostack-bootcamp/level-02/02.3-backend-authentication.md
+++ b/src/site/notes/notes/learning/rocketseat/gostack-bootcamp/level-02/02.3-backend-authentication.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/notes/learning/rocketseat/gostack-bootcamp/level-02/02-3-backend-authentication/","dgHomeLink":true,"dgPassFrontmatter":false}
+{"dg-publish":true,"permalink":"/notes/learning/rocketseat/gostack-bootcamp/level-02/02-3-backend-authentication/","dgHomeLink":true,"dgPassFrontmatter":false,"dgShowBacklinks":true,"dgShowLocalGraph":true}
 ---
 
 # Backend - Authentication
