--- a/src/site/notes/notes/11ty.md
+++ b/src/site/notes/notes/11ty.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/notes/11ty/","dgHomeLink":true,"dgPassFrontmatter":false,"dgShowBacklinks":true,"dgShowLocalGraph":true}
+{"dg-publish":true,"permalink":"/notes/11ty/","dgHomeLink":true,"dgPassFrontmatter":false,"dgShowBacklinks":true,"dgShowLocalGraph":false}
 ---
 
 # 11ty - a Static Site Generator
