--- a/src/site/notes/notes/learning/gcp/01.00 - Getting Started with GCP.md
+++ b/src/site/notes/notes/learning/gcp/01.00 - Getting Started with GCP.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/notes/learning/gcp/01-00-getting-started-with-gcp/","dgHomeLink":true,"dgPassFrontmatter":false,"dgShowBacklinks":true,"dgShowLocalGraph":true}
+{"dg-publish":true,"permalink":"/notes/learning/gcp/01-00-getting-started-with-gcp/","dgHomeLink":true,"dgPassFrontmatter":false,"dgShowBacklinks":true,"dgShowLocalGraph":false}
 ---
 
 # Getting Started with GCP
