--- a/src/site/notes/notes/learning/rocketseat/gostack-bootcamp/level-02/02.4-backend-images-upload.md
+++ b/src/site/notes/notes/learning/rocketseat/gostack-bootcamp/level-02/02.4-backend-images-upload.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/notes/learning/rocketseat/gostack-bootcamp/level-02/02-4-backend-images-upload/","dgHomeLink":true,"dgPassFrontmatter":false,"dgShowBacklinks":true,"dgShowLocalGraph":true}
+{"dg-publish":true,"permalink":"/notes/learning/rocketseat/gostack-bootcamp/level-02/02-4-backend-images-upload/","dgHomeLink":true,"dgPassFrontmatter":false,"dgShowBacklinks":true,"dgShowLocalGraph":false}
 ---
 
 # Backend - Images Upload
