--- a/src/site/notes/notes/learning/rocketseat/gostack-bootcamp/level-02/02.5-backend-handling-exceptions.md
+++ b/src/site/notes/notes/learning/rocketseat/gostack-bootcamp/level-02/02.5-backend-handling-exceptions.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/notes/learning/rocketseat/gostack-bootcamp/level-02/02-5-backend-handling-exceptions/","dgHomeLink":true,"dgPassFrontmatter":false,"dgShowBacklinks":true,"dgShowLocalGraph":true}
+{"dg-publish":true,"permalink":"/notes/learning/rocketseat/gostack-bootcamp/level-02/02-5-backend-handling-exceptions/","dgHomeLink":true,"dgPassFrontmatter":false,"dgShowBacklinks":true,"dgShowLocalGraph":false}
 ---
 
 # Backend - Handling Exceptions
