--- a/src/site/notes/notes/learning/rocketseat/gostack-bootcamp/level-03/02.1-frontend-pages.md
+++ b/src/site/notes/notes/learning/rocketseat/gostack-bootcamp/level-03/02.1-frontend-pages.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/notes/learning/rocketseat/gostack-bootcamp/level-03/02-1-frontend-pages/","dgHomeLink":true,"dgPassFrontmatter":false,"dgShowBacklinks":true,"dgShowLocalGraph":true}
+{"dg-publish":true,"permalink":"/notes/learning/rocketseat/gostack-bootcamp/level-03/02-1-frontend-pages/","dgHomeLink":true,"dgPassFrontmatter":false,"dgShowBacklinks":true,"dgShowLocalGraph":false}
 ---
 
 # React - Pages Structure
