--- a/src/site/notes/notes/learning/devops-bootcamp/03.1-bonus-databases.md
+++ b/src/site/notes/notes/learning/devops-bootcamp/03.1-bonus-databases.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/notes/learning/devops-bootcamp/03-1-bonus-databases/","dgHomeLink":true,"dgPassFrontmatter":false,"dgShowBacklinks":true,"dgShowLocalGraph":false}
+{"dg-publish":true,"permalink":"/notes/learning/devops-bootcamp/03-1-bonus-databases/"}
 ---
 
 # Bonus - Databases
