Update note notes/learning/gcp/01.00 - Getting Started with GCP.md

--- a/src/site/notes/notes/learning/gcp/01.00 - Getting Started with GCP.md
+++ b/src/site/notes/notes/learning/gcp/01.00 - Getting Started with GCP.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/notes/learning/gcp/01-00-getting-started-with-gcp/","dgHomeLink":true,"dgPassFrontmatter":false,"dgShowBacklinks":true,"dgShowLocalGraph":false}
+{"dg-publish":true,"permalink":"/notes/learning/gcp/01-00-getting-started-with-gcp/"}
 ---
 
 # Getting Started with GCP
@@ -10,7 +10,7 @@ IAM - Identity and Access Management
 
 **Projects** are the main way you organize the resources you use in GCP. Use them when you want to group a common business objective.
 
-[[atomic-ideas/Principle of least privilege|Principle of least privilege]]:
+[[atomic-ideas/Principle of least privilege\|Principle of least privilege]]:
 
 > Each user should have only those privileges needed to do their jobs.
 
