--- a/src/site/notes/notes/learning/gcp/01.02 - GCP IAM.md
+++ b/src/site/notes/notes/learning/gcp/01.02 - GCP IAM.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/notes/learning/gcp/01-02-gcp-iam/","dgHomeLink":true,"dgPassFrontmatter":false,"dgShowBacklinks":true,"dgShowLocalGraph":false}
+{"dg-publish":true,"permalink":"/notes/learning/gcp/01-02-gcp-iam/"}
 ---
 
 ### Identity and Access Management
