--- a/src/site/notes/notes/learning/k8s/kubernetes-ckad-with-tests/03.01-Commands and Arguments in Docker.md
+++ b/src/site/notes/notes/learning/k8s/kubernetes-ckad-with-tests/03.01-Commands and Arguments in Docker.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/notes/learning/k8s/kubernetes-ckad-with-tests/03-01-commands-and-arguments-in-docker/","dgHomeLink":true,"dgPassFrontmatter":false,"dgShowBacklinks":true,"dgShowLocalGraph":false}
+{"dg-publish":true,"permalink":"/notes/learning/k8s/kubernetes-ckad-with-tests/03-01-commands-and-arguments-in-docker/"}
 ---
 
 ## Commands and Arguments in Docker
