--- a/src/site/notes/notes/learning/k8s/kubernetes-ckad-with-tests/03.02-Environment Variables in Kubernetes.md
+++ b/src/site/notes/notes/learning/k8s/kubernetes-ckad-with-tests/03.02-Environment Variables in Kubernetes.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/notes/learning/k8s/kubernetes-ckad-with-tests/03-02-environment-variables-in-kubernetes/","dgHomeLink":true,"dgPassFrontmatter":false,"dgShowBacklinks":true,"dgShowLocalGraph":false}
+{"dg-publish":true,"permalink":"/notes/learning/k8s/kubernetes-ckad-with-tests/03-02-environment-variables-in-kubernetes/"}
 ---
 
 ## Environment Variables in Kubernetes
