--- a/src/site/notes/notes/learning/k8s/kubernetes-ckad-with-tests/03.03-ConfigMaps.md
+++ b/src/site/notes/notes/learning/k8s/kubernetes-ckad-with-tests/03.03-ConfigMaps.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/notes/learning/k8s/kubernetes-ckad-with-tests/03-03-config-maps/","dgHomeLink":true,"dgPassFrontmatter":false,"dgShowBacklinks":true,"dgShowLocalGraph":false}
+{"dg-publish":true,"permalink":"/notes/learning/k8s/kubernetes-ckad-with-tests/03-03-config-maps/"}
 ---
 
 ## ConfigMaps
