--- a/src/site/notes/notes/learning/k8s/kubernetes-ckad-with-tests/03.05-Docker Security and Security Context.md
+++ b/src/site/notes/notes/learning/k8s/kubernetes-ckad-with-tests/03.05-Docker Security and Security Context.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/notes/learning/k8s/kubernetes-ckad-with-tests/03-05-docker-security-and-security-context/","dgHomeLink":true,"dgPassFrontmatter":false,"dgShowBacklinks":true,"dgShowLocalGraph":false}
+{"dg-publish":true,"permalink":"/notes/learning/k8s/kubernetes-ckad-with-tests/03-05-docker-security-and-security-context/"}
 ---
 
 ## Docker Security
