--- a/src/site/notes/notes/learning/k8s/kubernetes-ckad-with-tests/03.06-Service Account.md
+++ b/src/site/notes/notes/learning/k8s/kubernetes-ckad-with-tests/03.06-Service Account.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/notes/learning/k8s/kubernetes-ckad-with-tests/03-06-service-account/","dgHomeLink":true,"dgPassFrontmatter":false,"dgShowBacklinks":true,"dgShowLocalGraph":false}
+{"dg-publish":true,"permalink":"/notes/learning/k8s/kubernetes-ckad-with-tests/03-06-service-account/"}
 ---
 
 ## Service Account
