--- a/src/site/notes/notes/learning/k8s/kubernetes-ckad-with-tests/03.10-Node Affinity.md
+++ b/src/site/notes/notes/learning/k8s/kubernetes-ckad-with-tests/03.10-Node Affinity.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/notes/learning/k8s/kubernetes-ckad-with-tests/03-10-node-affinity/","dgHomeLink":true,"dgPassFrontmatter":false,"dgShowBacklinks":true,"dgShowLocalGraph":false}
+{"dg-publish":true,"permalink":"/notes/learning/k8s/kubernetes-ckad-with-tests/03-10-node-affinity/"}
 ---
 
 ## Node Affinity
