--- a/src/site/notes/notes/learning/rocketseat/gostack-bootcamp/level-02/02.1-backend-database.md
+++ b/src/site/notes/notes/learning/rocketseat/gostack-bootcamp/level-02/02.1-backend-database.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/notes/learning/rocketseat/gostack-bootcamp/level-02/02-1-backend-database/","dgHomeLink":true,"dgPassFrontmatter":false,"dgShowBacklinks":true,"dgShowLocalGraph":false}
+{"dg-publish":true,"permalink":"/notes/learning/rocketseat/gostack-bootcamp/level-02/02-1-backend-database/"}
 ---
 
 # Backend - Database
