--- a/src/site/notes/notes/learning/rocketseat/gostack-bootcamp/level-02/02.99-gobarber-backend-summary.md
+++ b/src/site/notes/notes/learning/rocketseat/gostack-bootcamp/level-02/02.99-gobarber-backend-summary.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/notes/learning/rocketseat/gostack-bootcamp/level-02/02-99-gobarber-backend-summary/","dgHomeLink":true,"dgPassFrontmatter":false,"dgShowBacklinks":true,"dgShowLocalGraph":false}
+{"dg-publish":true,"permalink":"/notes/learning/rocketseat/gostack-bootcamp/level-02/02-99-gobarber-backend-summary/"}
 ---
 
 # GoBarber Backend Summary
